Use Java 17 in CI