@@ -29,7 +29,10 @@
 					<useUIThread>true</useUIThread>
 					<argLine>-Daj.weaving.verbose=true
 						-Dorg.aspectj.weaver.showWeaveInfo=true
-						-Dorg.aspectj.osgi.verbose=true</argLine>
+						-Dorg.aspectj.osgi.verbose=true
+						--add-opens=java.base/java.lang=ALL-UNNAMED
+						--add-modules=ALL-SYSTEM
+					</argLine>
 					<frameworkExtensions>
 						<frameworkExtension>
 							<groupId>p2.osgi.bundle</groupId>
